--- a/src/lexer/Makefile
+++ b/src/lexer/Makefile
@@ -5,12 +5,12 @@
 #                                                     +:+ +:+         +:+      #
 #    By: amitcul <amitcul@student.42porto.com>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/02/16 11:02:30 by amitcul           #+#    #+#              #
-#    Updated: 2023/02/18 21:57:55 by amitcul          ###   ########.fr        #
+#    Created: 2023/02/18 20:47:27 by amitcul           #+#    #+#              #
+#    Updated: 2023/02/18 21:56:49 by amitcul          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	minishell
+NAME	=	lexer.a
 
 CC		=	cc
 CFLAGS	=	-Wall -Wextra -Werror
@@ -18,42 +18,30 @@ RM		=	rm -f
 AR		=	ar rc
 RN		=	ranlib
 
-LIBS_DIR = ./libs
-
-LIBFT	=	libft
-LEXER	=	src/lexer
-
 O_DIR = ./obj
+I_DIR = ./../../includes
 
-SOURCES := src/main.c
+SOURCES := $(wildcard *.c)
 OBJECTS := $(SOURCES:.c=.o)
 
-all: start lib lexer $(NAME)
+OBJECTS_DIR := $(addprefix $(O_DIR)/,$(OBJECTS))
+
+all: start $(NAME)
+
+%.o : %.c
+	@$(CC) -c -I$(I_DIR) $< -o $(O_DIR)/$@
 
 start:
-	@if test -d $(O_DIR); then echo $(O_DIR) exist; else mkdir $(O_DIR); fi
-	@if test -d $(LIBS_DIR); then echo $(LIBS_DIR) exists; else mkdir $(LIBS_DIR); fi
-
-lib:
-	@make -C $(LIBFT)
-	@cp $(LIBFT)/libft.a ./libs/
-
-lexer:
-	@make -C $(LEXER)
-	@cp $(LEXER)/lexer.a ./libs/
+	@if test -d $(O_DIR); then echo lexer $(O_DIR) exists; else mkdir $(O_DIR); fi
 
 $(NAME): $(OBJECTS)
-	@$(CC) $(CFLAGS) $(OBJECTS) -o $(NAME) libs/*.a
+	@$(AR) $(NAME) $(OBJECTS_DIR)
+	@$(RN) $(NAME)
 
 clean:
-	$(RM) $(O_DIR)
-	make clean -C $(LIBFT)
-	make clean -C $(LEXER)
+	@rm -rf $(O_DIR)
 
 fclean: clean
-	@$(RM) $(NAME)
-	@make fclean -C $(LIBFT)
-	@make fclean -C $(LEXER)
-
-re: fclean all
+	@rm -rf $(NAME)
+	@rm -rf $(O_DIR)
 
