dividing by lexer tokens done

--- a/src/lexer/Makefile
+++ b/src/lexer/Makefile
@@ -6,14 +6,14 @@
 #    By: amitcul <amitcul@student.42porto.com>      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/02/18 20:47:27 by amitcul           #+#    #+#              #
-#    Updated: 2023/02/18 22:35:35 by amitcul          ###   ########.fr        #
+#    Updated: 2023/02/19 14:30:52 by amitcul          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME	=	lexer.a
 
 CC		=	cc
-CFLAGS	=	-Wall -Wextra -Werror
+CFLAGS	=	-Wall -Wextra -Werror -g
 RM		=	rm -f
 AR		=	ar rc
 RN		=	ranlib
@@ -21,7 +21,8 @@ RN		=	ranlib
 O_DIR = ./obj
 I_DIR = ./../../includes
 
-SOURCES := $(wildcard *.c)
+# SOURCES := $(wildcard *.c)
+SOURCES := lexer.c doubly_linked_list_utils.c
 OBJECTS := $(SOURCES:.c=.o)
 
 OBJECTS_DIR := $(addprefix $(O_DIR)/,$(OBJECTS))
@@ -29,17 +30,17 @@ OBJECTS_DIR := $(addprefix $(O_DIR)/,$(OBJECTS))
 all: start $(NAME)
 
 %.o : %.c
-	@$(CC) -c -I$(I_DIR) $< -o $(O_DIR)/$@
+	@$(CC) $(CFLAGS) -c -I$(I_DIR) $< -o $(O_DIR)/$@
 
 start:
-	@if test -d $(O_DIR); then echo lexer $(O_DIR) exists; else mkdir $(O_DIR); fi
+	@if test -d $(O_DIR); then echo lexer $(O_DIR) exist; else mkdir $(O_DIR); fi
 
 $(NAME): $(OBJECTS)
 	@$(AR) $(NAME) $(OBJECTS_DIR)
 	@$(RN) $(NAME)
 
 debug: all
-	$(CC) $(CFLAGS) $(NAME) libft.a main.c doubly_linked_list_utils.c
+	$(CC) $(CFLAGS) main.c $(NAME) libft.a
 
 d: debug
 
@@ -47,7 +48,8 @@ clean:
 	@rm -rf $(O_DIR)
 
 fclean: clean
-	rm -rf a.out
+	@rm -rf a.out
 	@rm -rf $(NAME)
 	@rm -rf $(O_DIR)
 
+re: fclean all
